# azure-databricks-dl-poc

./: .gitignore  README.md  pyproject.toml
dbt_project/: .user.yml  dbt_project.yml  profiles.yml  setup_dbt_env.sh
dbt_project/models/gold/: clinically_active.sql  schema.yml
dbt_project/models/silver/: condition.sql  schema.yml  silver_hashed_phi.sql  sources.yml
docs/: AZURE_DATABRICKS_POC.md
ingestion/: ingest_fhir.py
terraform/: .terraform.lock.hcl  compute.tf  databricks.tf  main.tf  outputs.tf  rbac.tf  storage.tf  terraform_example.tfvars  tf_backend_setup.sh  unity_catalog.tf  variables.tf
